# potterGPT

./: Dockerfile  Makefile  README.md  data.py  docker-compose.yml  generate.py  main.py  potterGPT.py  pyproject.toml  train.py
