[tool.poetry]
name = "pottergpt"
version = "0.1.0"
description = ""
authors = ["alessandropaticchio <alessandropaticchio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
gradio = "^3.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
